Adicionamos o link de navegação do código 2 dentro do arquivo do código 1.

--- a/codigo1.html
+++ b/codigo1.html
@@ -18,8 +18,10 @@
         win = window.open(pagina,nome,settings);
         }
     </script>
-    
-    
+
+
     <a href="http://www.terminalroot.com.br/" onclick="NovaJanela(this.href,'nomeJanela','820','560','yes');return false">Abrir Pop-Up</a>
+    <br>
+    <a href="/codigo2.html">Código 2</a>
 </body>
 </html>
